Fixed alot of layout issues

--- a/Frontend-Dev Eksamen 2/src/App.css
+++ b/Frontend-Dev Eksamen 2/src/App.css
@@ -35,12 +35,119 @@ button {
   padding-top: 10px;
 }
 
+.text-center {
+  max-width: 600px;
+  width: 100%;
+}
+
 .venue-card,
 .text-center {
-  border-radius: 3px;
+  border-radius: 2px;
+  border: none;
 }
 
 .card-img-top,
 .card-header {
-  border-radius: 3px 3px 0 0;
+  border-radius: 2px 2px 0 0;
+}
+
+.venue-card,
+.card {
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 2px 0px;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px,
+    rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px,
+    rgba(0, 0, 0, 0.07) 0px 16px 16px;
+}
+
+.card {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+}
+
+.VenueContainer {
+  background: #00000004;
+  padding-bottom: 40px;
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+}
+
+.g-4 {
+  padding-top: 20px;
+}
+
+.col-12 {
+  margin-top: 40px;
+}
+
+.card-header {
+  background-color: white;
+}
+
+/* Common styles for all cards */
+.venue-card {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: space-evenly;
+  min-width: 250px;
+}
+
+/* Image in the card */
+.venue-card .card-img-top {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+/* Card body */
+.venue-card .card-body {
+  flex-grow: 1;
+  overflow: hidden;
+  color: var(--text-color);
+}
+
+/* Card text */
+.venue-card .card-text {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: var(--text-color);
+}
+
+.my-4 {
+  color: rgba(0, 0, 0, 0.269);
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px;
+}
+
+@media (min-width: 992px) {
+  .container {
+    max-width: 900px;
+    margin: 0 auto; /* Center the container */
+  }
+}
+
+@media (max-width: 400px) {
+  .jumbotron {
+    padding: 2px;
+    margin-top: 20px;
+  }
+  .d-flex {
+    margin-top: 30px;
+  }
+
+  .navbar-nav {
+    text-align: center;
+  }
+
+  .inputWidth {
+    width: 100%;
+    margin: auto;
+  }
+  ul.col-12 {
+    flex-direction: column;
+    text-align: center;
+  }
+  .text-center {
+    margin: 30px auto;
+    max-width: 100%;
+  }
 }
