--- a/Frontend-Dev Eksamen 2/src/components/VenueOverview/venueOverview.css
+++ b/Frontend-Dev Eksamen 2/src/components/VenueOverview/venueOverview.css
@@ -1,34 +1,3 @@
-/* Common styles for all cards */
-.venue-card {
-  display: flex;
-  flex-direction: column;
-  margin: 5px;
-  min-height: 200px; /* Minimum height for the card */
-  padding-bottom: 30px; /* Extra bottom padding to accommodate the button */
-}
-
-/* Image in the card */
-.venue-card .card-img-top {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-}
-
-/* Card body */
-.venue-card .card-body {
-  flex-grow: 1;
-  overflow: hidden;
-  color: var(--text-color);
-}
-
-/* Card text */
-.venue-card .card-text {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  color: var(--text-color);
-}
-
 /* Jumbotron */
 
 div.jumbotron {
@@ -47,6 +16,7 @@ div.jumbotron {
 .venue-card .card {
   height: 100%;
   max-height: 400px; /* Maximum height for the card */
+  min-height: 400px;
 }
 
 /* Styling for list group items */
@@ -61,17 +31,4 @@ div.jumbotron {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-}
-
-@media (min-width: 992px) {
-  .container {
-    max-width: 80%;
-    margin: 0 auto; /* Center the container */
-  }
-}
-
-@media (max-width: 400px) {
-  .jumbotron {
-    padding: 2px;
-  }
 }
